--- a/build
+++ b/build
@@ -1,10 +1,10 @@
-if [ ! -e dissertation.toc ] || [ $1 == "all" ]
+xelatex dissertation.tex
+if [ $1 == "all" ] || [ ! -e dissertation.bcf ]
+then
+  bibtex dissertation.tex
+  xelatex dissertation.tex
+  xelatex dissertation.tex
+elif [ ! -e dissertation.toc ] || [ $1 == "toc" ]
 then
   xelatex dissertation.tex
-  xelatex dissertation.tex
-  num="twice"
-else
-  xelatex dissertation.tex
-  num="once"
 fi
-echo Dissertation built $num.
